Bug fixes for dark mode

--- a/app/globals/globals.css
+++ b/app/globals/globals.css
@@ -100,7 +100,7 @@
   }
   
   .input-field {
-    @apply bg-gray-50 dark:bg-gray-700 border border-gray-300 dark:border-gray-600 text-gray-900 dark:text-gray-100 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5;
+    @apply bg-white dark:bg-gray-700 border border-gray-300 dark:border-gray-600 text-gray-900 dark:text-gray-100 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5;
   }
   
   .section-title {
